# curry-fp

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
src/curry_fp/: curry.py
src/currypy/: curry.py
test/: test_curry.py
